@@ -52,19 +52,20 @@ enum {
 	IPREFS_ORDER_MANUAL
 };
 
-guint    na_iprefs_get_import_mode       ( const NAPivot *pivot, const gchar *pref, gboolean *mandatory );
-void     na_iprefs_set_import_mode       ( const NAPivot *pivot, const gchar *pref, guint mode );
+guint    na_iprefs_get_import_mode        ( const NAPivot *pivot, const gchar *pref, gboolean *mandatory );
+void     na_iprefs_set_import_mode        ( const NAPivot *pivot, const gchar *pref, guint mode );
 
-guint    na_iprefs_get_order_mode        ( const NAPivot *pivot, gboolean *mandatory );
-void     na_iprefs_set_order_mode        ( const NAPivot *pivot, guint mode );
+guint    na_iprefs_get_order_mode         ( const NAPivot *pivot, gboolean *mandatory );
+guint    na_iprefs_get_order_mode_by_label( const gchar *label );
+void     na_iprefs_set_order_mode         ( const NAPivot *pivot, guint mode );
 
-GQuark   na_iprefs_get_export_format     ( const NAPivot *pivot, const gchar *pref, gboolean *mandatory );
-void     na_iprefs_set_export_format     ( const NAPivot *pivot, const gchar *pref, GQuark format );
+GQuark   na_iprefs_get_export_format      ( const NAPivot *pivot, const gchar *pref, gboolean *mandatory );
+void     na_iprefs_set_export_format      ( const NAPivot *pivot, const gchar *pref, GQuark format );
 
-GSList  *na_iprefs_get_io_providers      ( const NAPivot * );
+GSList  *na_iprefs_get_io_providers       ( const NAPivot * );
 
-gboolean na_iprefs_is_level_zero_writable( const NAPivot *pivot );
-gboolean na_iprefs_write_level_zero      ( const NAPivot *pivot, const GList *items, GSList **messages );
+gboolean na_iprefs_is_level_zero_writable ( const NAPivot *pivot );
+gboolean na_iprefs_write_level_zero       ( const NAPivot *pivot, const GList *items, GSList **messages );
 
 G_END_DECLS
 
