@@ -1,5 +1,9 @@
 2011-01-28 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-iprefs.c:
+	* src/core/na-iprefs.h (na_iprefs_get_order_mode_by_label):
+	New function.
+
 	* src/core/na-icontext.c (is_candidate_for_basenames):
 	Fix case insenstive comparison (bug reported by Johan Spee).
 
